After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750866 - dashdemux: xml parser will segfault if there is no default namespace
dashdemux: xml parser will segfault if there is no default namespace
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-12 15:51 UTC by Florin Apostol
Modified: 2015-06-12 20:46 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch to fix the segfault in case of missing default namespace (2.45 KB, patch)
2015-06-12 15:51 UTC, Florin Apostol
committed Details | Review

Description Florin Apostol 2015-06-12 15:51:35 UTC
Created attachment 305161 [details] [review]
patch to fix the segfault in case of missing default namespace

If the MPD element does not contain a default namespace, the gst_mpdparser_get_xml_node_namespace will attempt to use a_node->ns->href and will segfault because a_node->ns is NULL.
Comment 1 Sebastian Dröge (slomo) 2015-06-12 20:46:25 UTC
commit b23e4452a2366490a6203e616adf74eb97aab327
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Fri Jun 12 16:44:55 2015 +0100

    dashdemux: fixed segfault for missing default namespace
    
    Added a check for a_node->ns before accessing a_node->ns->href in
    gst_mpdparser_get_xml_node_namespace. This could happen if the xml
    is missing the default namespace.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=750866
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.
Comment 2 Sebastian Dröge (slomo) 2015-06-12 20:46:33 UTC
commit b23e4452a2366490a6203e616adf74eb97aab327
Author: Florin Apostol <florin.apostol@oregan.net>
Date:   Fri Jun 12 16:44:55 2015 +0100

    dashdemux: fixed segfault for missing default namespace
    
    Added a check for a_node->ns before accessing a_node->ns->href in
    gst_mpdparser_get_xml_node_namespace. This could happen if the xml
    is missing the default namespace.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=750866